Added admin user and fixed location in healthzones
